--- a/mammals-service/package.json
+++ b/mammals-service/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "mamal-service",
+  "name": "mammals-service",
   "version": "1.0.0",
   "description": "Playground for contract testing",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "jackal-tests": "jackal run http://localhost:25863 mamal-service"
+    "jackal-tests": "jackal run http://localhost:25863 mammals-service"
   },
   "keywords": [
     "Contract testing",
@@ -15,6 +15,7 @@
   "author": "Joaquin Corchero",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
 }
