--- a/dinosaurs-mammals-consumer/package.json
+++ b/dinosaurs-mammals-consumer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "consumer-b",
+  "name": "dinosaurs-mammals-consumer",
   "version": "1.0.0",
   "description": "Playground for contract testing",
   "main": "server.js",
@@ -15,6 +15,8 @@
   "author": "Joaquin Corchero",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
