Added birds and reptiles services and renamed consumers

--- a/consumer-a/package.json
+++ b/consumer-a/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dinosaurs-mammals-consumer",
+  "name": "consumer a",
   "version": "1.0.0",
   "description": "Playground for contract testing",
   "main": "server.js",
