--- a/reptiles-service/package.json
+++ b/reptiles-service/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dinosaur-tfl-consumer",
+  "name": "reptiles-service",
   "version": "1.0.0",
   "description": "Playground for contract testing",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "jackal-tests": "jackal send http://localhost:25863 ./contracts"
+    "jackal-tests": "jackal run http://localhost:25863 reptiles-service"
   },
   "keywords": [
     "Contract testing",
@@ -15,7 +15,7 @@
   "author": "Joaquin Corchero",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
-    "request": "^2.83.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   }
 }
