--- a/consumer-b/package.json
+++ b/consumer-b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "consumer b",
+  "name": "consumer-b",
   "version": "1.0.0",
   "description": "Playground for contract testing",
   "main": "server.js",
